--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<input type="text" [(ngModel)]="name">
-<p>{{name}}</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>I'm in the AppComponent!</h1>
+      <hr>
+      <app-servers></app-servers>
+    </div>
+  </div>
+</div>
+
