--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,11 @@
+<input type="text"
+          class="form-control"
+          (input)="onUpdateServerName($event)">
+<input type="text"
+  class="form-control"
+  [(ngModel)]="serverName">
+
+<p>The Server's name is {{serverName}}</p>
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
 <p>{{serverCreationStatus}}</p>
 <app-server></app-server>
