--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,6 +1,6 @@
-<input type="text"
+<!-- <input type="text"
           class="form-control"
-          (input)="onUpdateServerName($event)">
+          (input)="onUpdateServerName($event)"> -->
 <input type="text"
   class="form-control"
   [(ngModel)]="serverName">
