--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,5 @@
-<p> The {{'Server'}} {{serverId}} is {{getServerStatus()}}</p>
+<p
+[ngStyle]="{ backgroundColor: getColor()}"
+[ngClass]="{online: serverStatus === 'online'}"> The {{'Server'}} {{serverId}} is {{getServerStatus()}}
+{{ServerStatus === 'online'}}
+</p>
