--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -7,7 +7,10 @@
 
 <!-- <p>The Server's name is {{serverName}}</p> -->
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
-<p *ngIf="serverCreated">Server was created and his name is {{serverName}}</p>
+<p *ngIf="serverCreated; else noServer">Server was created and his name is {{serverName}}</p>
+<ng-template #noServer>
+  <p>No server was created !</p>
+</ng-template>
 <!-- <p>{{serverCreationStatus}}</p> -->
 <app-server></app-server>
 <app-server></app-server>
